cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
project(exr_basic)
include_directories(src)
set(SOURCES)
set(SOURCES ${SOURCES} src/exr_basic/exr_basic.cpp)
set(SOURCES ${SOURCES} src/exr_basic/exr_basic.h)
source_group(src/exr_basic FILES src/exr_basic/exr_basic.cpp src/exr_basic/exr_basic.h)
add_library(exr_basic SHARED ${SOURCES})
install (TARGETS exr_basic DESTINATION lib)

FIND_PACKAGE(OpenEXR REQUIRED COMPONENTS )
include_directories(${OPENEXR_INCLUDE_DIRS})
target_link_libraries(exr_basic ${OPENEXR_LIBRARIES})
install (FILES src/exr_basic/exr_basic.h DESTINATION include/exr_basic)
